H2: Change formatting, clean verbose terminal output